[package]
name = "christopeer"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
base64 = "0.22.1"
diesel = {version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.5"
h2 = "0.4.6"
log = "0.4.22"
openssl = "0.10.68"
prost = "0.13.3"
rand = "0.8.5"
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
